--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+  <meta charset="utf-8">
+  <title>Himanshu Singh</title>
+
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400&display=swap" rel="stylesheet">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+
+  <body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <div class="intro">
+      <img class="main-img" src="./images/heman.jpg" alt="Profile Pic">
+      <h1 class="main-pretext">I am</h1>
+      <h1 class="main-name">Himanshu Singh</h1>
+
+    </div>
+    <div class="main-prof container">
+      <div class="row">
+          <div class="col-md-2 prof">
+            <a href="https://www.google.com"><i class="fab fa-github fa-3x"></i></a>
+          </div>
+          <div class="col-md-2 prof">
+            <a href="#"><i class="fab fa-linkedin fa-3x"></i></a>
+          </div>
+          <div class="col-md-2 prof">
+            <a href="#"><i class="fas fa-envelope fa-3x"></i></a>
+          </div>
+          <div class="col-md-2 prof">
+            <a href="#"><i class="fab fa-google fa-3x"></i></i></a>
+          </div>
+      </div>
+    </div>
+  </body>
+
+</html>
