--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Himanshu Singh</title>
-
+  <link rel="shortcut icon" href="./images/HS.ico" type="image/x-icon">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,6 +14,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400&display=swap" rel="stylesheet">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@400;600&display=swap" rel="stylesheet">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -21,6 +25,11 @@
 
   <body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+
+    <section class="main">
+
+
     <div class="intro">
       <img class="main-img" src="./images/heman.jpg" alt="Profile Pic">
       <h1 class="main-pretext">I am</h1>
@@ -32,16 +41,16 @@
     <div class="main-prof container">
       <div class="row">
           <div class="col-md-2 prof">
-            <a href="https://www.google.com"><i class="fab fa-github fa-3x"></i></a>
+            <a href="https://github.com/HimanshuSinghGH" target="_blank"><i class="fab fa-github fa-3x"></i></a>
           </div>
           <div class="col-md-2 prof">
-            <a href="#"><i class="fab fa-linkedin fa-3x"></i></a>
+            <a href="https://www.linkedin.com/in/himanshu-singh-li/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
           </div>
           <div class="col-md-2 prof">
-            <a href="#"><i class="fas fa-envelope fa-3x"></i></a>
+            <a href=""><i class="fas fa-envelope fa-3x"></i></a>
           </div>
           <div class="col-md-2 prof">
-            <a href="#"><i class="fab fa-google fa-3x"></i></i></a>
+            <a href="https://scholar.google.com/citations?user=r81kNvAAAAAJ&hl=en&oi=sra" target="_blank"><i class="fab fa-google fa-3x"></i></i></a>
           </div>
       </div>
     </div>
@@ -52,15 +61,18 @@
 
 
     <script>
-            var typed_strings = ["A Developer", "A Pythonist", "An AI/ML Enthusiast"] ;
+            var typed_strings = ["A Developer", "A Researcher", "An AI/ML Enthusiast", "A Pythonist"] ;
             var typed = new Typed("#interests", {
                 strings: typed_strings,
                 typeSpeed: 20,
                 loop: true,
                 backDelay: 2000,
                 backSpeed: 20,
+                cursorChar:"_",
             });
     </script>
+
+  </section>
   </body>
 
 </html>
