Added main profile page and proceed button

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
       <span id='interests'></span>
     </div>
 
+    <div class="main-prof3 container">
+      <a href="profile.html"><h5 style="color:white;">PROCEED <i class="fas fa-angle-right"></i> </h5></a>
+    </div>
+
 
     <script>
             var typed_strings = ["A Developer", "A Researcher", "An AI/ML Enthusiast", "A Pythonist"] ;
