updated about and education section

--- a/profile.html
+++ b/profile.html
@@ -59,10 +59,8 @@
       <h3>ABOUT</h3>
     </div>
     <div class="section-content section-content-about">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-        minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-        culpa qui officia deserunt mollit anim id est laborum.</p>
+      <p>Hi ! I am Himanshu Singh.</br> I am currently pursuing a Master's in Computer Science and Engineering from Texas A/& M University, College Station.
+      </br> </br> I am really passionate about finding practical application of Artificial Intelligence and Machine Learning to solve challenging real world problems.</p>
     </div>
   </section>
 
@@ -72,10 +70,40 @@
       <h3>Education</h3>
     </div>
     <div class="section-content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-        minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-        reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-        culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="container">
+        <div class="row">
+
+          <div class="col-lg">
+            <div class="card custom-card">
+            <img class="card-img-top" src="./images/dummy_pic.png" alt="Card image cap">
+            <div class="card-body">
+              <h3 class="card-title">Texas A & M University</h3>
+              <div class="card-desc">
+                <p class="card-text"><b>Location: </b> College Station, Texas</p>
+                <p class="card-text"><b>Duration: </b> Aug 2021 - Present</p>
+                <p class="card-text"><b>Program: </b> Master of Science (Thesis) - Computer Science</p>
+              </div>
+            </div>
+          </div>
+          </div>
+
+          <div class="col-lg">
+            <div class="card custom-card">
+            <img class="card-img-top" src="./images/dummy_pic.png" alt="Card image cap">
+            <div class="card-body">
+              <h3 class="card-title">IIIT - Naya Raipur</h3>
+              <div class="card-desc">
+                <p class="card-text"><b>Location: </b> Chhattisgarh, India</p>
+                <p class="card-text"><b>Duration: </b> Aug 2016 - July 2020</p>
+                <p class="card-text"><b>Program: </b> Bachelor of Technology - Computer Science</p>
+                <p class="card-text"><b>CGPA: 9.30 / 10.00</b> (10.00 is best) </p>
+              </div>
+            </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
     </div>
   </section>
 
