added experience and publication sections

--- a/profile.html
+++ b/profile.html
@@ -43,6 +43,9 @@
             <a class="nav-link" aria-current="page" href="#">Experience</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#">Publications</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#">Projects</a>
           </li>
           <li class="nav-item">
@@ -54,71 +57,130 @@
   </nav>
 
   <!-- About Section  -->
-  <section id="about">
-    <div class="section-header">
-      <h3>ABOUT</h3>
-    </div>
-    <div class="section-content section-content-about">
-      <p>Hi ! I am Himanshu Singh.</br> I am currently pursuing a Master's in Computer Science and Engineering from Texas A/& M University, College Station.
-      </br> </br> I am really passionate about finding practical application of Artificial Intelligence and Machine Learning to solve challenging real world problems.</p>
-    </div>
-  </section>
+  <div class="main-body">
+      <section id="about">
+        <div class="section-header">
+          <h3>ABOUT</h3>
+        </div>
+        <div class="section-content section-content-about">
+          <p>Hi ! I am Himanshu Singh.</br> I am currently pursuing a Master's in Computer Science and Engineering from Texas A/& M University, College Station.
+          </br> </br> I am really passionate about finding practical application of Artificial Intelligence and Machine Learning to solve challenging real world problems.</p>
+        </div>
+      </section>
 
-  <!-- Education Section  -->
-  <section id="education">
-    <div class="section-header">
-      <h3>Education</h3>
-    </div>
-    <div class="section-content">
-      <div class="container">
-        <div class="row">
+      <!-- Education Section  -->
+      <section id="education">
+        <div class="section-header">
+          <h3>EDUCATION</h3>
+        </div>
+        <div class="section-content">
+          <div class="container">
+            <div class="row">
 
-          <div class="col-lg">
-            <div class="card custom-card">
-            <img class="card-img-top" src="./images/dummy_pic.png" alt="Card image cap">
-            <div class="card-body">
-              <h3 class="card-title">Texas A & M University</h3>
-              <div class="card-desc">
-                <p class="card-text"><b>Location: </b> College Station, Texas</p>
-                <p class="card-text"><b>Duration: </b> Aug 2021 - Present</p>
-                <p class="card-text"><b>Program: </b> Master of Science (Thesis) - Computer Science</p>
+              <div class="col-lg">
+                <div class="card custom-card">
+                <img class="card-img-top" src="./images/dummy_pic.png" alt="Card image cap">
+                <div class="card-body">
+                  <h3 class="card-title">Texas A & M University</h3>
+                  <div class="card-desc">
+                    <p class="card-text"><b>Location: </b> College Station, Texas</p>
+                    <p class="card-text"><b>Duration: </b> Aug 2021 - Present</p>
+                    <p class="card-text"><b>Program: </b> Master of Science (Thesis) - Computer Science</p>
+                  </div>
+                </div>
+              </div>
+              </div>
+
+              <div class="col-lg">
+                <div class="card custom-card">
+                <img class="card-img-top" src="./images/dummy_pic.png" alt="Card image cap">
+                <div class="card-body">
+                  <h3 class="card-title">IIIT - Naya Raipur</h3>
+                  <div class="card-desc">
+                    <p class="card-text"><b>Location: </b> Chhattisgarh, India</p>
+                    <p class="card-text"><b>Duration: </b> Aug 2016 - July 2020</p>
+                    <p class="card-text"><b>Program: </b> Bachelor of Technology - Computer Science</p>
+                    <p class="card-text"><b>CGPA: 9.30 / 10.00</b> (10.00 is best) </p>
+                  </div>
+                </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Experience Section  -->
+      <section id="experience">
+      <div class="section-header">
+        <h3>EXPERIENCE</h3>
+      </div>
+      <div class="section-content">
+        <div class="container">
+          <div class="row">
+
+            <div class="col-lg">
+              <div class="card custom-card">
+              <img class="card-img-top" src="./images/dummy_pic.png" alt="Card image cap">
+              <div class="card-body">
+                <h4 class="card-title">National University of Singapore</h4>
+                <div class="card-desc">
+                  <p class="card-text"><b>Location: </b> Singapore</p>
+                  <p class="card-text"><b>Duration: </b> Jan 2020 - Aug 2020</p>
+                  <p class="card-text"><b>Role: </b> Research Inter (Machine Learning)</p>
+                </div>
               </div>
             </div>
-          </div>
-          </div>
+            </div>
 
-          <div class="col-lg">
-            <div class="card custom-card">
-            <img class="card-img-top" src="./images/dummy_pic.png" alt="Card image cap">
-            <div class="card-body">
-              <h3 class="card-title">IIIT - Naya Raipur</h3>
-              <div class="card-desc">
-                <p class="card-text"><b>Location: </b> Chhattisgarh, India</p>
-                <p class="card-text"><b>Duration: </b> Aug 2016 - July 2020</p>
-                <p class="card-text"><b>Program: </b> Bachelor of Technology - Computer Science</p>
-                <p class="card-text"><b>CGPA: 9.30 / 10.00</b> (10.00 is best) </p>
+            <div class="col-lg">
+              <div class="card custom-card">
+              <img class="card-img-top" src="./images/dummy_pic.png" alt="Card image cap">
+              <div class="card-body">
+                <h4 class="card-title">Centre for Homelessness Impact</h4>
+                <div class="card-desc">
+                  <p class="card-text"><b>Location: </b> London</p>
+                  <p class="card-text"><b>Duration: </b> Mar 2021 - July 2021</p>
+                  <p class="card-text"><b>Role: </b> Consulting Research Engineer (Remote)</p>
+                </div>
+              </div>
               </div>
             </div>
-            </div>
-          </div>
 
+            <div class="col-lg">
+              <div class="card custom-card">
+              <img class="card-img-top" src="./images/dummy_pic.png" alt="Card image cap">
+              <div class="card-body">
+                <h4 class="card-title">Deloitte USI</h4>
+                <div class="card-desc">
+                  <p class="card-text"><b>Location: </b> Bengaluru, India</p>
+                  <p class="card-text"><b>Duration: </b> Aug 2020 - July 2021</p>
+                  <p class="card-text"><b>Role: </b> Business Analyst</p>
+                </div>
+              </div>
+              </div>
+            </div>
+
+          </div>
         </div>
       </div>
+  </section>
+  <section id="publication">
+    <div class="section-header">
+      <h3>PUBLICATIONS</h3>
     </div>
+    <div class="container">
+      <div class="section-content section-content-publication">
+        <p><b><a class='paper-title' href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8389037&isnumber=8388962">H. Singh, V. Pallagani, V. Khandelwal and U. Venkanna, "IoT based smart home automation system using sensor node," 2018 4th International Conference on Recent Advances in Information Technology (RAIT), 2018, pp. 1-5, doi: 10.1109/RAIT.2018.8389037.</a></b></p>
+  <p style='font-size:1rem;'>Abstract: In recent years, the advancements in Information and Communication Technology (ICT) are mainly focused on the Internet of Things (IoT). In a real-world scenario, IoT based services improve the domestic environment and are used in various applications. Home automation based IoT is versatile and popular applications. In home automation, all home appliances are networked together and able to operate without human involvement. Home automation gives a significant change in humans life which gives smart operating of home appliances. This motivated us to develop a new solution which controls some home appliances like light, fan, door cartons, energy consumption, and level of the Gas cylinder using various sensors like LM35, IR sensors, LDR module, Node MCU ESP8266, and Arduino UNO. The proposed solution uses the sensor and detects the presence or absence of a human object in the housework accordingly. Our solution also provides information about the energy consumed by the house owner regularly in the form of message. Also, it checks, the level of gas in the gas cylinder if it reaches lesser than the threshold, it automatically books the gas and sends a reference number as a message to the house owner. The proposed solution is deployed and tested for various conditions. Finally, in this paper, the working model of our proposed solution is developed as a prototype and explained as a working model.</p>
+      </div>
+    </div>
+
   </section>
 
-  <!-- Experience Section  -->
-  <section id="experience">
-  <div class="section-header">
-    <h3>ABOUT</h3>
   </div>
-  <div class="section-content section-content-about">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-      reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-      culpa qui officia deserunt mollit anim id est laborum.</p>
-  </div>
-</section>
+
 
   </body>
 </html>
