added section header padding and fixed section href in navbar

--- a/profile.html
+++ b/profile.html
@@ -34,16 +34,16 @@
       <div class="collapse navbar-collapse d-flex" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">About</a>
+            <a class="nav-link active" aria-current="page" href="#about">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#education">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Experience</a>
+            <a class="nav-link" aria-current="page" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Publications</a>
+            <a class="nav-link" aria-current="page" href="#publication">Publications</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#">Projects</a>
@@ -57,8 +57,10 @@
   </nav>
 
   <!-- About Section  -->
-  <div class="main-body">
+
       <section id="about">
+        <div class="section-padding">
+        </div>
         <div class="section-header">
           <h3>ABOUT</h3>
         </div>
@@ -70,6 +72,8 @@
 
       <!-- Education Section  -->
       <section id="education">
+        <div class="section-padding">
+        </div>
         <div class="section-header">
           <h3>EDUCATION</h3>
         </div>
@@ -113,6 +117,8 @@
 
       <!-- Experience Section  -->
       <section id="experience">
+        <div class="section-padding">
+        </div>
       <div class="section-header">
         <h3>EXPERIENCE</h3>
       </div>
@@ -167,19 +173,21 @@
       </div>
   </section>
   <section id="publication">
+    <div class="section-padding">
+    </div>
     <div class="section-header">
       <h3>PUBLICATIONS</h3>
     </div>
     <div class="container">
       <div class="section-content section-content-publication">
         <p><b><a class='paper-title' href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8389037&isnumber=8388962">H. Singh, V. Pallagani, V. Khandelwal and U. Venkanna, "IoT based smart home automation system using sensor node," 2018 4th International Conference on Recent Advances in Information Technology (RAIT), 2018, pp. 1-5, doi: 10.1109/RAIT.2018.8389037.</a></b></p>
-  <p style='font-size:1rem;'>Abstract: In recent years, the advancements in Information and Communication Technology (ICT) are mainly focused on the Internet of Things (IoT). In a real-world scenario, IoT based services improve the domestic environment and are used in various applications. Home automation based IoT is versatile and popular applications. In home automation, all home appliances are networked together and able to operate without human involvement. Home automation gives a significant change in humans life which gives smart operating of home appliances. This motivated us to develop a new solution which controls some home appliances like light, fan, door cartons, energy consumption, and level of the Gas cylinder using various sensors like LM35, IR sensors, LDR module, Node MCU ESP8266, and Arduino UNO. The proposed solution uses the sensor and detects the presence or absence of a human object in the housework accordingly. Our solution also provides information about the energy consumed by the house owner regularly in the form of message. Also, it checks, the level of gas in the gas cylinder if it reaches lesser than the threshold, it automatically books the gas and sends a reference number as a message to the house owner. The proposed solution is deployed and tested for various conditions. Finally, in this paper, the working model of our proposed solution is developed as a prototype and explained as a working model.</p>
+  <p style='font-size:1rem;'><b>Abstract:</b> In recent years, the advancements in Information and Communication Technology (ICT) are mainly focused on the Internet of Things (IoT). In a real-world scenario, IoT based services improve the domestic environment and are used in various applications. Home automation based IoT is versatile and popular applications. In home automation, all home appliances are networked together and able to operate without human involvement. Home automation gives a significant change in humans life which gives smart operating of home appliances. This motivated us to develop a new solution which controls some home appliances like light, fan, door cartons, energy consumption, and level of the Gas cylinder using various sensors like LM35, IR sensors, LDR module, Node MCU ESP8266, and Arduino UNO. The proposed solution uses the sensor and detects the presence or absence of a human object in the housework accordingly. Our solution also provides information about the energy consumed by the house owner regularly in the form of message. Also, it checks, the level of gas in the gas cylinder if it reaches lesser than the threshold, it automatically books the gas and sends a reference number as a message to the house owner. The proposed solution is deployed and tested for various conditions. Finally, in this paper, the working model of our proposed solution is developed as a prototype and explained as a working model.</p>
       </div>
     </div>
 
   </section>
 
-  </div>
+
 
 
   </body>
