added second publication and improved formatting

--- a/profile.html
+++ b/profile.html
@@ -172,6 +172,8 @@
         </div>
       </div>
   </section>
+
+  <!-- Publications Section  -->
   <section id="publication">
     <div class="section-padding">
     </div>
@@ -180,13 +182,36 @@
     </div>
     <div class="container">
       <div class="section-content section-content-publication">
-        <p><b><a class='paper-title' href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8389037&isnumber=8388962">H. Singh, V. Pallagani, V. Khandelwal and U. Venkanna, "IoT based smart home automation system using sensor node," 2018 4th International Conference on Recent Advances in Information Technology (RAIT), 2018, pp. 1-5, doi: 10.1109/RAIT.2018.8389037.</a></b></p>
-  <p style='font-size:1rem;'><b>Abstract:</b> In recent years, the advancements in Information and Communication Technology (ICT) are mainly focused on the Internet of Things (IoT). In a real-world scenario, IoT based services improve the domestic environment and are used in various applications. Home automation based IoT is versatile and popular applications. In home automation, all home appliances are networked together and able to operate without human involvement. Home automation gives a significant change in humans life which gives smart operating of home appliances. This motivated us to develop a new solution which controls some home appliances like light, fan, door cartons, energy consumption, and level of the Gas cylinder using various sensors like LM35, IR sensors, LDR module, Node MCU ESP8266, and Arduino UNO. The proposed solution uses the sensor and detects the presence or absence of a human object in the housework accordingly. Our solution also provides information about the energy consumed by the house owner regularly in the form of message. Also, it checks, the level of gas in the gas cylinder if it reaches lesser than the threshold, it automatically books the gas and sends a reference number as a message to the house owner. The proposed solution is deployed and tested for various conditions. Finally, in this paper, the working model of our proposed solution is developed as a prototype and explained as a working model.</p>
+
+        <div>
+          <p><b><a class='paper-title' href="https://raw.githubusercontent.com/cslev/doh_ml/main/DNS_over_HTTPS_identification.pdf" target="_blank">L. Csikor, H. Singh, M. S. Kang and D. M. Divakaran, "Privacy of DNS-over-HTTPS: Requiem for a Dream?", In proceedings of IEEE European Symposium on Security and Privacy, 2021.
+</a></b></p>
+          <p style='font-size:1rem;'><b>Abstract:</b>The recently proposed DNS-over-HTTPS (DoH) protocol is becoming increasingly popular in addressing the privacy concerns of exchanging plain-text DNS messages over potentially malicious transit networks (e.g., mass surveillance at ISPs). By employing HTTPS to encrypt DNS communications, DoH traffic inherently becomes indistinguishable from regular encrypted Web traffic, rendering active disruption (e.g., downgrading to the plain-text DNS) by transit networks extremely hard. In this work, we investigate whether DoH traffic is indeed indistinguishable from encrypted Web traffic. To this end, we collect several DoH traffic traces corresponding to 25 resolvers (including major ones, e.g., Google and Cloudflare) by visiting thousands of domains in Alexa’s list of top-ranked websites at different geographical locations and environments. Based on the collected traffic, we train a machine learning model to classify HTTPS traffic as either Web or DoH. With our DoH identification model in place, we show that an authoritarian ISP can identify ∼97.4% (∼90%) of the DoH packets correctly in a closed-world (open-world) setting while only misclassifying 1 in 10,000 Web packets. To counter this DoH identification model, we propose an effective mitigation technique, making the identification model impractical for ISPs to filter and consequently downgrade DoH to plain-text DNS communications.</p>
+        </div>
+        <div class="publication-content">
+          <p><b><a class='paper-title' href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8389037&isnumber=8388962">H. Singh, V. Pallagani, V. Khandelwal and U. Venkanna, "IoT based smart home automation system using sensor node," 2018 4th International Conference on Recent Advances in Information Technology (RAIT), 2018, pp. 1-5, doi: 10.1109/RAIT.2018.8389037.</a></b></p>
+          <p style='font-size:1rem;'><b>Abstract:</b> In recent years, the advancements in Information and Communication Technology (ICT) are mainly focused on the Internet of Things (IoT). In a real-world scenario, IoT based services improve the domestic environment and are used in various applications. Home automation based IoT is versatile and popular applications. In home automation, all home appliances are networked together and able to operate without human involvement. Home automation gives a significant change in humans life which gives smart operating of home appliances. This motivated us to develop a new solution which controls some home appliances like light, fan, door cartons, energy consumption, and level of the Gas cylinder using various sensors like LM35, IR sensors, LDR module, Node MCU ESP8266, and Arduino UNO. The proposed solution uses the sensor and detects the presence or absence of a human object in the housework accordingly. Our solution also provides information about the energy consumed by the house owner regularly in the form of message. Also, it checks, the level of gas in the gas cylinder if it reaches lesser than the threshold, it automatically books the gas and sends a reference number as a message to the house owner. The proposed solution is deployed and tested for various conditions. Finally, in this paper, the working model of our proposed solution is developed as a prototype and explained as a working model.</p>
+        </div>
+
+
       </div>
     </div>
 
   </section>
 
+
+  <!-- Skills Section  -->
+  <section id="skills">
+    <div class="section-padding">
+    </div>
+    <div class="section-header">
+      <h3>SKILLS</h3>
+    </div>
+    <div class="section-content section-content-skills">
+      <p>Hi ! I am Himanshu Singh.</br> I am currently pursuing a Master's in Computer Science and Engineering from Texas A/& M University, College Station.
+      </br> </br> I am really passionate about finding practical application of Artificial Intelligence and Machine Learning to solve challenging real world problems.</p>
+    </div>
+  </section>
 
 
 
