added category wise tiles to skill section and fixed formatting

--- a/profile.html
+++ b/profile.html
@@ -49,7 +49,7 @@
             <a class="nav-link" aria-current="page" href="#">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Skills</a>
+            <a class="nav-link" aria-current="page" href="#skills">Skills</a>
           </li>
         </ul>
       </div>
@@ -208,8 +208,130 @@
       <h3>SKILLS</h3>
     </div>
     <div class="section-content section-content-skills">
-      <p>Hi ! I am Himanshu Singh.</br> I am currently pursuing a Master's in Computer Science and Engineering from Texas A/& M University, College Station.
-      </br> </br> I am really passionate about finding practical application of Artificial Intelligence and Machine Learning to solve challenging real world problems.</p>
+
+      <div class="container">
+        <div class="skill-section-title">
+          <h2>Languages</h2>
+        </div>
+          <div class="row">
+
+            <div class="col-lg-2 skill-tile">
+              <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+              <h4>C++</h4>
+            </div>
+
+            <div class="col-lg-2 skill-tile">
+              <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+              <h4>Python</h4>
+            </div>
+
+            <div class="col-lg-2 skill-tile">
+              <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+              <h4>JavaScript</h4>
+            </div>
+
+            <div class="col-lg-2 skill-tile">
+              <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+              <h4>HTML</h4>
+            </div>
+
+            <div class="col-lg-2 skill-tile">
+              <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+              <h4>CSS</h4>
+            </div>
+
+            <div class="col-lg-2 skill-tile">
+              <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+              <h4>PHP</h4>
+            </div>
+            </div>
+
+            <div class="skill-section-title" style="margin-top:50px;">
+              <h2>Databases</h2>
+            </div>
+              <div class="row">
+
+                <div class="col-lg-2 skill-tile">
+                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <h4>MySQL</h4>
+                </div>
+
+                <div class="col-lg-2 skill-tile">
+                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <h4>MongoDB</h4>
+                </div>
+              </div>
+
+            <div class="skill-section-title" style="margin-top:50px;">
+              <h2>Frameworks</h2>
+            </div>
+              <div class="row">
+
+                <div class="col-lg-2 skill-tile">
+                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <h4>React</h4>
+                </div>
+
+                <div class="col-lg-2 skill-tile">
+                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <h4>React-Native</h4>
+                </div>
+
+                <div class="col-lg-2 skill-tile">
+                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <h4>Node.js</h4>
+                </div>
+
+                <div class="col-lg-2 skill-tile">
+                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <h4>Express.js</h4>
+                </div>
+
+                <div class="col-lg-2 skill-tile">
+                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <h4>Node.js</h4>
+                </div>
+
+                <div class="col-lg-2 skill-tile">
+                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <h4>Express.js</h4>
+                </div>
+              </div>
+
+              <div class="row row-second">
+
+                <div class="col-lg-2 skill-tile">
+                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <h4>React</h4>
+                </div>
+
+                <div class="col-lg-2 skill-tile">
+                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <h4>React-Native</h4>
+                </div>
+
+                <div class="col-lg-2 skill-tile">
+                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <h4>Node.js</h4>
+                </div>
+
+                <div class="col-lg-2 skill-tile">
+                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <h4>Express.js</h4>
+                </div>
+
+                <div class="col-lg-2 skill-tile">
+                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <h4>Node.js</h4>
+                </div>
+
+                <div class="col-lg-2 skill-tile">
+                  <img src="./images/dummy_pic.png" alt="skill image" class='skill-pic' >
+                  <h4>Express.js</h4>
+                </div>
+              </div>
+
+      </div>
     </div>
   </section>
 
